# evm

./: .dockerignore  .gitignore  Cargo.toml  README.md  genesis-state  genesis-wasm
benchmarking/: frame-weight-template.hbs
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
client/evm-tracing/src/listeners/: call_list.rs  mod.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  serialization.rs  single.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
client/rpc-core/types/: Cargo.toml
client/rpc-core/types/src/: lib.rs
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
mrevm-types-bundle/: check.ts  generateJSON.ts  index.ts  package-lock.json  package.json
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: account_key.rs  lib.rs
node/cli/src/: cli.rs  command.rs  lib.rs
node/service/: Cargo.toml
node/service/src/: client.rs  inherents.rs  lib.rs  rpc.rs
node/service/src/chain_spec/: fake_spec.rs  mod.rs  moonbase.rs  moonrabbit.rs  test_spec.rs
node/service/src/rpc/: tracing.rs
node/src/: main.rs  tests.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: lib.rs  mock.rs  tests.rs
pallets/author-mapping/: Cargo.toml
pallets/author-mapping/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/jurisdiction-staking/: Cargo.toml
pallets/jurisdiction-staking/src/: benchmarks.rs  inflation.rs  lib.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/maintenance-mode/: Cargo.toml
pallets/maintenance-mode/src/: lib.rs  mock.rs  tests.rs
pallets/migrations/: Cargo.toml
pallets/migrations/src/: lib.rs  mock.rs  tests.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/balances-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/crowdloan-rewards/: Cargo.toml  CrowdloanInterface.sol
precompiles/crowdloan-rewards/src/: lib.rs  mock.rs  tests.rs
precompiles/pallet-democracy/: Cargo.toml
precompiles/pallet-democracy/src/: lib.rs  mock.rs  tests.rs
precompiles/parachain-staking/: Cargo.toml  StakingInterface.sol
precompiles/parachain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  tests.rs
precompiles/xcm_transactor/: Cargo.toml
precompiles/xcm_transactor/src/: lib.rs  mock.rs  tests.rs
precompiles/xtokens/: Cargo.toml
precompiles/xtokens/src/: encoding.rs  lib.rs  mock.rs  tests.rs
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/debug/src/: block.rs  lib.rs  serialization.rs  single.rs
primitives/rpc/debug/src/proxy/: mod.rs
primitives/rpc/debug/src/proxy/formats/: blockscout.rs  mod.rs  raw.rs  trace_filter.rs
primitives/rpc/debug/src/proxy/types/: evm_gasometer_types.rs  evm_runtime_types.rs  evm_types.rs  mod.rs
primitives/rpc/debug/src/proxy/v1/: mod.rs
primitives/rpc/debug/src/proxy/v2/: call_list.rs  mod.rs  raw.rs
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  lib.rs  runtime.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  lib.rs  migrations.rs
runtime/evm_tracer/: Cargo.toml
runtime/evm_tracer/src/: lib.rs
runtime/moonbase/: Cargo.toml
runtime/moonbase/src/: lib.rs  precompiles.rs
runtime/moonbase/tests/: evm_tracing.rs  integration_test.rs  runtime_apis.rs  xcm_tests.rs
runtime/moonbase/tests/common/: mod.rs
runtime/moonbase/tests/xcm_mock/: mod.rs  parachain.rs  relay_chain.rs
runtime/moonrabbit/: Cargo.toml
runtime/moonrabbit/src/: lib.rs  precompiles.rs
runtime/moonrabbit/tests/: evm_tracing.rs  integration_test.rs  runtime_apis.rs
runtime/moonrabbit/tests/common/: mod.rs
