[package]
name = " mrevm-client-evm-tracing"
version = '0.1.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
 mrevm-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
ethereum-types = { version = "0.12.0" }
sp-std = { git = "https://github.com/moonrabbit/substrate", branch = " mrevm-moonrabbit-v0.9.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hex = { version = "0.4", features = ["serde"]}
