[package]
name = "pallet-asset-manager"
version = "0.1.0"
authors = ["moonrabbit"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/moonrabbit/substrate", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }
sp-io = { git = "https://github.com/moonrabbit/substrate", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }
sp-std = { git = "https://github.com/moonrabbit/substrate", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }
xcm = { git = "https://github.com/moonrabbit/moonrabbit", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }


frame-support = { git = "https://github.com/moonrabbit/substrate", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }
frame-system = { git = "https://github.com/moonrabbit/substrate", default-features = false, branch = " mrevm-moonrabbit-v0.9.10" }


[dev-dependencies]
pallet-balances = { git = "https://github.com/moonrabbit/substrate", branch = " mrevm-moonrabbit-v0.9.10" }
sp-core = { git = "https://github.com/moonrabbit/substrate", branch = " mrevm-moonrabbit-v0.9.10" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"xcm/std",
	"frame-system/std",
	"xcm-primitives/std"
]
