[package]
name = "xcm-transactor-precompiles"
authors = [ "MoonRabbit" ]
description = "A Precompile to make xcm-transactor accessible to pallet-evm"
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# moonrabbit
precompile-utils = { path = "../utils", default-features = false }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }
xcm-transactor = { path = "../../pallets/xcm-transactor", default-features = false }

# Substrate
frame-support = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }

# Frontier
evm = { version = "0.35.0", default-features = false, features = [ "with-codec" ] }
fp-evm = { git = "https://github.com/moonrabbit/frontier", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }
pallet-evm = { git = "https://github.com/moonrabbit/frontier", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }

# moonrabbit
xcm = { git = "https://github.com/moonrabbit/moonrabbit", branch = "moonrabbit-moonrabbit-v0.9.18", default-features = false }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.9"

# moonrabbit
xcm-primitives = { path = "../../primitives/xcm/" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
pallet-balances = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18" }
pallet-timestamp = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18" }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-io = { git = "https://github.com/moonrabbit/substrate", branch = "moonrabbit-moonrabbit-v0.9.18" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/moonrabbit/cumulus", branch = "moonrabbit-moonrabbit-v0.9.18" }

# moonrabbit
pallet-xcm = { git = "https://github.com/moonrabbit/moonrabbit", branch = "moonrabbit-moonrabbit-v0.9.18" }
xcm-builder = { git = "https://github.com/moonrabbit/moonrabbit", branch = "moonrabbit-moonrabbit-v0.9.18" }
xcm-executor = { git = "https://github.com/moonrabbit/moonrabbit", branch = "moonrabbit-moonrabbit-v0.9.18" }

# ORML
orml-traits = { git = "https://github.com/moonrabbit/open-runtime-module-library", branch = "moonrabbit-moonrabbit-v0.9.18" }

[features]
default = [ "std" ]
std = [
	"evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"xcm-primitives/std",
	"xcm-transactor/std",
]
