[package]
name = " mrevm-evm-tracer"
version = '0.1.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
fp-evm = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-evm = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec", "tracing"] }
evm-runtime = { version = "0.27.0", default-features = false, features = ["tracing"] }
evm-gasometer = { version = "0.27.0", default-features = false, features = ["tracing"] }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "moonrabbit-v0.9.8" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "moonrabbit-v0.9.8" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "moonrabbit-v0.9.8" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "moonrabbit-v0.9.8" }
 mrevm-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
 mrevm-primitives-ext = { path = "../../primitives/ext", default-features = false }
ethereum-types = { version = "0.11.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"evm/std",
	"evm-runtime/std",
	"evm-gasometer/std",
	"evm/with-serde",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"ethereum-types/std",
	"fp-evm/std",
	" mrevm-rpc-primitives-debug/std",
	" mrevm-primitives-ext/std",
]
