[package]
name = 'moonbase-runtime'
description = 'Moonbase Runtime'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
version = '0.8.4'
authors = ["moonrabbit"]
edition = '2018'
build = "build.rs"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4"

runtime-common = { path = "../common", default-features = false }

pallet-author-inherent = { git = "https://github.com/moonrabbit/cumulus", branch = "joshy-np098", default-features = false }
account = { path = "../../primitives/account/", default-features = false }
 mrevm-core-primitives = { path = "../../core-primitives", default-features = false }
pallet-ethereum-chain-id = { path = "../../pallets/ethereum-chain-id", default-features = false }
jurisdiction-staking = { path = "../../pallets/jurisdiction-staking", default-features = false }
jurisdiction-staking-precompiles = { path = "../../precompiles/jurisdiction-staking", default-features = false }
pallet-maintenance-mode = { path = "../../pallets/maintenance-mode", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/moonrabbit/cumulus", branch = "joshy-np098", default-features = false }
nimbus-primitives = { git = "https://github.com/moonrabbit/cumulus", branch = "joshy-np098", default-features = false }
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
precompile-utils = { path = "../../precompiles/utils", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-evm-precompile-dispatch = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-evm-precompile-modexp = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-evm-precompile-simple = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }


# Substrate dependencies
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
max-encoded-len = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8", features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-evm = { git = "https://github.com/moonrabbit/frontier", default-features = false, branch = "mrevm-phase-four" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }

pallet-ethereum = { default-features = false, git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }
fp-rpc = { default-features = false, git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }

pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-society = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8" }

pallet-crowdloan-rewards = { git = "https://github.com/moonrabbit/crowdloan-rewards", default-features = false, branch = "main" }
crowdloan-rewards-precompiles = { path = "../../precompiles/crowdloan-rewards", default-features = false }

 mrevm-evm-tracer = { path = "../evm_tracer", default-features = false }
 mrevm-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
 mrevm-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }

# Cumulus dependencies
cumulus-pallet-jurisdiction-system = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }
cumulus-primitives-core = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }
jurisdiction-info = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }
cumulus-primitives-timestamp = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }

# Benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8", optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8", optional = true }

frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "moonrabbit-v0.9.8", optional = true }

[dev-dependencies]
cumulus-test-relay-sproof-builder = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }
cumulus-primitives-jurisdiction-inherent = { git = "https://github.com/moonrabbit/cumulus", default-features = false, branch = "joshy-np098" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
rlp = "0.5"
hex = "0.4"
sha3 = "0.8"

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }

[features]
default = ["std"]
std = [
	"runtime-common/std",
	"parity-scale-codec/std",
	"serde",
	"sha3/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"precompile-utils/std",
	" mrevm-rpc-primitives-debug/std",
	" mrevm-rpc-primitives-txpool/std",
	"fp-rpc/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-ethereum-chain-id/std",
	"pallet-democracy/std",
	"pallet-scheduler/std",
	"pallet-collective/std",
	"pallet-author-inherent/std",
	" mrevm-evm-tracer/std",
	"jurisdiction-info/std",
	"cumulus-pallet-jurisdiction-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"account/std",
	" mrevm-core-primitives/std",
	"jurisdiction-staking/std",
	"jurisdiction-staking-precompiles/std",
	"pallet-author-slot-filter/std",
	"pallet-maintenance-mode/std",
	"pallet-crowdloan-rewards/std",
	"frame-benchmarking/std",
	"pallet-society/std",
	"pallet-proxy/std",
	"nimbus-primitives/std",
	"pallet-author-mapping/std",
	"max-encoded-len/std",
	"evm/std",
]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"jurisdiction-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-author-mapping/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
]
