[package]
name = " mrevm-rpc-core-txpool"
version = '0.6.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = "0.11.0"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fc-rpc-core = { git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }
