[package]
name = " mrevm-rpc-core-types"
version = '0.1.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
ethereum-types = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
