[package]
name = " mrevm-rpc-debug"
version = '0.1.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
tokio = { version = "0.2.21", features = ["sync", "time"] }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = "15.0.0"

ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = "0.11.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8" }

 mrevm-rpc-core-debug = { path = "../../rpc-core/debug" }
 mrevm-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }
fc-consensus = { git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }
fc-db = { git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }
fc-rpc = { git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four", features = ["rpc_binary_search_estimate"] }
fp-rpc = { git = "https://github.com/moonrabbit/frontier", branch = "mrevm-phase-four" }
