[package]
name = " mrevm-rpc-primitives-txpool"
version = '0.6.0'
authors = ['moonrabbit']
edition = '2018'
homepage = 'https:// mrevm.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/moonrabbit/ mrevm/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "moonrabbit-v0.9.8", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
]
